fixed stretch

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,8 +24,6 @@ body {
   max-height: 350px;
   margin-left: auto ;
   margin-right: auto ;
-  width: 75%;
-
   display: block;
 }
 
